--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <h1> Anime </h1>
+    <hr>
+    <article>
+          <h2>article 1</h2>
+          <p class="ash">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto maiores officiis doloremque voluptatum voluptates tempora repellat odit animi eligendi recusandae autem, quas sequi assumenda illum nisi, dolorum est tempore nesciunt?</p>
+           
+          <h2>article 2 </h2>
+          <p id="a2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis officia explicabo soluta eaque ratione autem, delectus distinctio nemo porro voluptate, cum quibusdam unde quo voluptas aut odit repudiandae architecto est!</p>
+
+           <h2>acticle 3</h2>
+           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit earum tempore atque. Corporis voluptatem, iure ipsa explicabo, molestiae odio vitae ut, velit ipsam quo exercitationem minus magni necessitatibus harum tempora?</p>
+    </article>
     
 </body>
 </html>
